# ai_digest

./: .env.example  .gitignore  HANDOFF.md  README.md  docker-compose.yml  handoff.md  render.yaml  run-docker.sh  run-local.sh
.claude/: settings.local.json
.github/workflows/: scheduled_digest.yml  scheduled_fetch.yml
apps/api/: .env.example  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/app/: db.py  digest.py  fetcher.py  main.py  models.py  scheduler.py  schemas.py  summarizer.py
apps/api/tests/: conftest.py  test_digest.py  test_fetcher.py  test_routes.py
apps/web/: Dockerfile  package-lock.json  package.json
apps/web/app/: actions.ts  layout.tsx  page.tsx
apps/web/app/article/[id]/: page.tsx
apps/web/app/stats/: page.tsx
apps/web/app/subscribe/: page.tsx
apps/web/components/: ArticleCard.tsx  FetchButton.tsx  NavBar.tsx  SearchBar.tsx  StatsCharts.tsx  SubscribeForm.tsx
apps/web/lib/: api.ts
